# Mesa-3D

./: configure.ac
docs/: GL3.txt
include/D3D/: d3dadapter9.h  d3ddrm.h  d3dpresent.h
include/D3D9/: d3d9.h  d3d9caps.h  d3d9types.h  d3d9xlib.h
include/d3dadapter/: d3dadapter9.h  drm.h  present.h
include/d3dadapter9/: d3dadapter9.h
src/gallium/: Makefile.am
src/gallium/auxiliary/draw/: draw_cliptest_tmp.h  draw_context.c
src/gallium/auxiliary/hud/: hud_context.c
src/gallium/auxiliary/pipe-loader/: Makefile.am  pipe_loader.h  pipe_loader_sw.c
src/gallium/auxiliary/target-helpers/: inline_nine_ref_helper.h
src/gallium/auxiliary/tgsi/: tgsi_opcode_tmp.h  tgsi_strings.c  tgsi_ureg.c  tgsi_ureg.h
src/gallium/auxiliary/util/: u_atomic.h  u_box.h  u_dl.c  u_draw.c  u_draw.h  u_dump.h  u_dump_defines.c  u_dump_state.c  u_rect.h
src/gallium/docs/source/: context.rst  screen.rst  tgsi.rst
src/gallium/docs/source/cso/: rasterizer.rst
src/gallium/drivers/freedreno/: freedreno_screen.c
src/gallium/drivers/i915/: i915_screen.c
src/gallium/drivers/ilo/: ilo_screen.c
src/gallium/drivers/llvmpipe/: lp_draw_arrays.c  lp_screen.c
src/gallium/drivers/nouveau/: Makefile.am  nouveau_buffer.c  nouveau_buffer.h  nouveau_context.h  nouveau_fence.c  nouveau_screen.c  nouveau_screen.h  nouveau_util.h  nouveau_video.c  nouveau_winsys.h
src/gallium/drivers/nouveau/codegen/: nv50_ir_driver.h  nv50_ir_emit_nvc0.cpp  nv50_ir_from_tgsi.cpp  nv50_ir_lowering_nv50.cpp  nv50_ir_lowering_nvc0.cpp  nv50_ir_lowering_nvc0.h
src/gallium/drivers/nouveau/nv30/: nv30_screen.c
src/gallium/drivers/nouveau/nv50/: nv50_context.h  nv50_program.c  nv50_screen.c  nv50_state.c  nv50_state_validate.c  nv50_surface.c  nv50_transfer.c  nv50_vbo.c
src/gallium/drivers/nouveau/nvc0/: nvc0_3d.xml.h  nvc0_context.c  nvc0_context.h  nvc0_program.c  nvc0_program.h  nvc0_query.c  nvc0_screen.c  nvc0_screen.h  nvc0_shader_state.c  nvc0_state.c  nvc0_state_validate.c  nvc0_stateobj.h  nvc0_surface.c  nvc0_tex.c  (+2 more)
src/gallium/drivers/nv30/: Makefile.am  nv30_screen.c
src/gallium/drivers/nv50/: Makefile.am  Makefile.sources  nv50_3d.xml.h  nv50_context.c  nv50_context.h  nv50_defs.xml.h  nv50_formats.c  nv50_miptree.c  nv50_program.c  nv50_program.h  nv50_query.c  nv50_screen.c  nv50_shader_state.c  nv50_state.c  nv50_state_validate.c  nv50_stateobj_tex.h  nv50_surface.c  nv50_tex.c  nv50_transfer.c  nv50_vbo.c
src/gallium/drivers/nvc0/: Makefile.am  Makefile.sources  nvc0_3d.xml.h  nvc0_context.c  nvc0_context.h  nvc0_graph_macros.h  nvc0_miptree.c  nvc0_program.c  nvc0_program.h  nvc0_query.c  nvc0_resource.h  nvc0_screen.c  nvc0_screen.h  nvc0_shader_state.c  nvc0_state.c  nvc0_state_validate.c  nvc0_stateobj.h  nvc0_surface.c  nvc0_tex.c  nvc0_transfer.c  nvc0_vbo.c  nvc0_vbo_translate.c  nve4_compute.c  nve4_compute.h  nve4_compute.xml.h
src/gallium/drivers/r300/: r300_screen.c
src/gallium/drivers/r600/: evergreen_state.c  r600_asm.c  r600_asm.h  r600_pipe.c  r600_pipe.h  r600_query.c  r600_shader.c  r600_shader.h  r600_state.c  r600_state_common.c
src/gallium/drivers/radeonsi/: radeonsi_pipe.c  si_pipe.c
src/gallium/drivers/softpipe/: Makefile.am  sp_draw_arrays.c  sp_screen.c
src/gallium/drivers/svga/: svga_screen.c
src/gallium/drivers/trace/: tr_dump_state.c
src/gallium/include/pipe/: p_context.h  p_defines.h  p_shader_tokens.h  p_state.h
src/gallium/state_trackers/: Makefile.am
src/gallium/state_trackers/clover/: Makefile.am
src/gallium/state_trackers/nine/: Makefile.am  README  adapter9.c  adapter9.h  basetexture9.c  basetexture9.h  cubetexture9.c  cubetexture9.h  device9.c  device9.h  device9ex.c  device9ex.h  guid.c  indexbuffer9.c  indexbuffer9.h  iunknown.c  iunknown.h  nine_debug.c  nine_debug.h  nine_defines.h  nine_dump.c  nine_dump.h  nine_ff.c  nine_ff.h  nine_helpers.h  nine_lock.c  nine_lock.h  nine_pipe.c  nine_pipe.h  nine_shader.c  nine_shader.h  nine_state.c  nine_state.h  pixelshader9.c  pixelshader9.h  query9.c  query9.h  resource9.c  resource9.h  stateblock9.c  (+19 more)
src/gallium/state_trackers/nine/adapter/: drm.c
src/gallium/targets/: Makefile.am
src/gallium/targets/d3dadapter9/: Makefile.am  drm.c  getproc.c
src/gallium/targets/gbm/: Makefile.am
src/gallium/targets/libd3d9-wine/: Makefile.am  d3d9.c  debug.c  debug.h  driver.h  guid.c  guid.h
src/gallium/targets/libd3d9-wine/autoconf/: configure.ac
src/gallium/targets/libd3d9-wine/x11/: adjust.c  adjust.h  dri2.c  dri2.h  driver.c  present.c  present.h
src/gallium/targets/libd3d9-xlib/: Makefile.am  d3d9.c  debug.c  debug.h  guid.c  guid.h  present.c  present.h
src/gallium/targets/nine-freedreno/: Makefile.am  target.c
src/gallium/targets/nine-i915/: Makefile.am  target.c
src/gallium/targets/nine-ilo/: Makefile.am  target.c
src/gallium/targets/nine-nouveau/: Makefile.am  target.c
src/gallium/targets/nine-r300/: Makefile.am  target.c
src/gallium/targets/nine-r600/: Makefile.am  target.c
src/gallium/targets/nine-radeonsi/: Makefile.am  target.c
src/gallium/targets/nine-vmwgfx/: Makefile.am  target.c
src/gallium/targets/opencl/: Makefile.am
src/gallium/targets/pipe-loader/: Makefile.am
src/gallium/targets/xa/: Makefile.am
src/gallium/tests/trivial/: Makefile.am  compute.c
src/mesa/main/: api_validate.c  api_validate.h  bufferobj.c  dd.h  dlist.c  extensions.c  get.c  get_hash_params.py  mtypes.h  vtxfmt.c
src/mesa/main/tests/: dispatch_sanity.cpp
src/mesa/state_tracker/: st_atom_msaa.c  st_atom_rasterizer.c  st_atom_scissor.c  st_atom_viewport.c  st_cb_bitmap.c  st_cb_blit.c  st_cb_bufferobjects.c  st_cb_bufferobjects.h  st_cb_drawpixels.c  st_cb_drawtex.c  st_cb_fbo.c  st_cb_msaa.c  st_cb_rasterpos.c  st_cb_readpixels.c  st_cb_texture.c  st_context.c  st_context.h  st_draw.c  st_draw.h  st_draw_feedback.c  st_extensions.c  st_glsl_to_tgsi.cpp  st_mesa_to_tgsi.c
src/mesa/tnl/: t_draw.c  tnl.h
src/mesa/vbo/: vbo.h  vbo_exec_array.c  vbo_exec_draw.c  vbo_primitive_restart.c  vbo_rebase.c  vbo_save_api.c  vbo_save_draw.c  vbo_split_copy.c  vbo_split_inplace.c
(+30 files in other folders)
